@@ -499,6 +499,9 @@ fully support the editing toolbar, but was found to be too confusing.
 * Move PHP 5-friendly XHTML doctype hack to Sanitizer, use for sig checks.
   Fixes use of named entities in sigs on PHP 5
 * (bug 4482) Include move comment on the null edit as well as the redirect
+* (bug 3990) Use existing session name if session.auto_start is on
+  Fixes checks for open sessions, such as the cookie warning on login.
+  Patch by Zbigniew Braniecki.
 
 
 === Caveats ===
